<!--
  ~ Copyright 2019 these are based on the 'technicalmiracle.blogspot.com'
  ~ blog content. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Android Animation Probe</string>
    <string name="label_for_width"><b><i>Layout</i> width : </b></string>
    <string name="label_for_height"><b><i>Layout</i> height : </b></string>
    <string name="label_for_scale_value"><b><i>The base size : </i></b></string>
    <string name="current_orientation_V"><b><BIG>Portrait mode</BIG></b></string>
    <string name="current_orientation_H"><b><BIG>Landscape mode</BIG></b></string>
    <string name="spring_physics_animation">\tSpring \nAnimation</string>
    <string name="layout_transition">\tScene \nanimation</string>
    <string name="arbitrary_animation">\tArbitrary \nanimation</string>
    <string name="drawable_graphics_animation">\tAnimations Launch Screen</string>
    <string name="stiffness_value">Stiffness value</string>
    <string name="damping_ratio">Damping ratio</string>
    <string name="event1X">Event1 X :</string>
    <string name="event1Y">Event1 Y :</string>
    <string name="event2X">Event2 X :</string>
    <string name="event2Y">Event2 Y :</string>
    <string name="xVelocity">X Velocity :</string>
    <string name="yVelocity">Y Velocity :</string>
    <string name="acceleration">Acceleration factor :</string>
    <string name="screen_placeholder">screen placeholder</string>
</resources>
